--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
 <h1>Slides</h1>
 
-<p>Here are the HTML/reveal.js slides - for PDFs, please see <a href="https://www.slideshare.net/jneubert">https://www.slideshare.net/jneubert</a><p>
+<p>Here are the HTML/reveal.js slides. For Powerpoint/PDFs, please see <a href="https://www.slideshare.net/jneubert">https://www.slideshare.net/jneubert</a>.<p>
 
 <ul>
 <li><a href="wd-ak-archive-2019">Wikidata</a> AK Archive der Leibniz-Gemeinschaft, 2019-10-01</p></li>
+<li><a href="/wd-dcmi2019">Wikidata as a hub for the Linked Data Cloud</a> Tutorial at DCMI conference, Seoul, 2019-09-25 (with Tom Baker and Andra Waagmeester)</p></li>
 <li><a href="wd-kim-2017">Wikidata as authority linking hub</a> DINI KIM Workshop, Mannheim, 2017-05-04 (with Jakob Voß)</p></li>
 
 </ul>
