--- a/wd-ak-archive-2019/index.html
+++ b/wd-ak-archive-2019/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Slides</title>
+		<title>Wikidata - AK Archive, 2019-10-01</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
