--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>Here are the HTML/reveal.js slides. For Powerpoint/PDFs, please see <a href="https://www.slideshare.net/jneubert">https://www.slideshare.net/jneubert</a>.<p>
 
 <ul>
+<li><a href="hdm-pm20-proj1">Pressemappe 20. Jahrhundert. Materialien zum Projekt Sommersemester 2020, Hochschule der Medien Stuttgart, Prof. Kai Eckert, 2020-03-20</a></li>
 <li><a href="wd-ak-archive-2019">Wikidata (für Archive)</a> AK Archive der Leibniz-Gemeinschaft, 2019-10-01</p></li>
 <li><a href="/wd-dcmi2019">Wikidata as a hub for the Linked Data Cloud</a> Tutorial at DCMI conference, Seoul, 2019-09-25 (with Tom Baker and Andra Waagmeester)</p></li>
 <li><a href="wd-kim-2017">Wikidata as authority linking hub</a> DINI KIM Workshop, Mannheim, 2017-05-04 (with Jakob Voß)</p></li>
