--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <ul>
 <li><a href="hdm-pm20-proj1">Pressemappe 20. Jahrhundert. Materialien zum Projekt Sommersemester 2020</a>, Hochschule der Medien Stuttgart, Prof. Kai Eckert, 2020-03-20</li>
-<li><a href="wd-ak-archive-2019">Wikidata (für Archive)</a> AK Archive der Leibniz-Gemeinschaft, 2019-10-01</p></li>
-<li><a href="/wd-dcmi2019">Wikidata as a hub for the Linked Data Cloud</a> Tutorial at DCMI conference, Seoul, 2019-09-25 (with Tom Baker and Andra Waagmeester)</p></li>
-<li><a href="wd-kim-2017">Wikidata as authority linking hub</a> DINI KIM Workshop, Mannheim, 2017-05-04 (with Jakob Voß)</p></li>
+<li><a href="wd-ak-archive-2019">Wikidata (für Archive)</a> AK Archive der Leibniz-Gemeinschaft, 2019-10-01</li>
+<li><a href="/wd-dcmi2019">Wikidata as a hub for the Linked Data Cloud</a> Tutorial at DCMI conference, Seoul, 2019-09-25 (with Tom Baker and Andra Waagmeester)</li>
+<li><a href="wd-kim-2017">Wikidata as authority linking hub</a> DINI KIM Workshop, Mannheim, 2017-05-04 (with Jakob Voß)</li>
 
 </ul>
 
