--- a/wd-netzwerk-pressedokumentation-2022/index.html
+++ b/wd-netzwerk-pressedokumentation-2022/index.html
@@ -7,12 +7,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="https://unpkg.com/reveal.js@3.9.2//css/reveal.min.css"/>
+  <link rel="stylesheet" href="js/reveal.js/css/reveal.min.css"/>
     <style type="text/css">code{white-space: pre;}</style>
-    <link rel="stylesheet" href="https://unpkg.com/reveal.js@3.9.2//css/theme/simple.css" id="theme">
-  <link rel="stylesheet" media="print" href="https://unpkg.com/reveal.js@3.9.2//css/print/pdf.css" />
+    <link rel="stylesheet" href="js/reveal.js/css/theme/simple.css" id="theme">
+  <link rel="stylesheet" media="print" href="js/reveal.js/css/print/pdf.css" />
   <!--[if lt IE 9]>
-  <script src="https://unpkg.com/reveal.js@3.9.2//lib/js/html5shiv.js"></script>
+  <script src="js/reveal.js/lib/js/html5shiv.js"></script>
   <![endif]-->
 </head>
 <body>
@@ -164,8 +164,8 @@ ZBW - Leibniz Information Centre for Economics, Kiel/Hamburg (Germany)
     </div>
   </div>
 
-  <script src="https://unpkg.com/reveal.js@3.9.2//lib/js/head.min.js"></script>
-  <script src="https://unpkg.com/reveal.js@3.9.2//js/reveal.min.js"></script>
+  <script src="js/reveal.js/lib/js/head.min.js"></script>
+  <script src="js/reveal.js/js/reveal.min.js"></script>
 
   <script>
 
@@ -181,11 +181,11 @@ ZBW - Leibniz Information Centre for Economics, Kiel/Hamburg (Germany)
 
         // Optional libraries used to extend on reveal.js
         dependencies: [
-          { src: 'https://unpkg.com/reveal.js@3.9.2//lib/js/classList.js', condition: function() { return !document.body.classList; } },
-          { src: 'https://unpkg.com/reveal.js@3.9.2//plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-          { src: 'https://unpkg.com/reveal.js@3.9.2//plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
-//          { src: 'https://unpkg.com/reveal.js@3.9.2//plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; }, }
-//          { src: 'https://unpkg.com/reveal.js@3.9.2//plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
+          { src: 'js/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+          { src: 'js/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+          { src: 'js/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+//          { src: 'js/reveal.js/plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; }, }
+//          { src: 'js/reveal.js/plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
 ]});
     </script>
   </body>
