--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="simple.css" />
   </head>
-<body style="font-family: Arial,sans;">
+<body>
 
 <h1>Slides</h1>
 
